# CRUD-App

./: DBinfo.py  README.md  __init__.py  app.py  package.json  pyproject.toml  requirements.txt
docker/postgres/: docker-compose.yml  setup.sql
src/static/data/: history.json
static/css/: styles.css
static/data/: history.json
static/js/: app.js  search.js
templates/: history.html  index.html  login.html  review.html  signup.html
tests/: test_app.py
