[tool.poetry]
name = "cs471-f20-team2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[virtualenvs]
create = true
in-project = true

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
psycopg2 = "^2.8.6"
flask_cors = "^3.0.9"
flask_bcrypt = "^0.7.1"
flask_jwt_extended = "^3.24.1"
flask_session = "^0.3.2"
flask_socketio = "^4.3.1"
validate_email = "^1.3"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
